--- a/How to Steam API/index.html
+++ b/How to Steam API/index.html
@@ -5,12 +5,13 @@
 <title>Steam API Intro</title>
 </head>
 <body>
-<header><a href="">Home</a>
-<a href="">API Key</a>
-<a href="">App News</a>
-<a href="">Player Achievements</a>
-<a href="">Global Achievement %</a>
-<a href="">Friends List</a> </header>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <h1>How to use Steam's API</h1>
 <br>
 <div>
@@ -28,15 +29,16 @@
 <li>GetUserStatsForGame</li>
 <li>GetFriendList</li>
 </ol>
-<h2><a href="">Start Here!</a></h2>
+<h2><a href="apiKey.html">Start Here!</a></h2>
 </div>
 <footer>
 <nav>
-<a href="">GetNewsForApp</a><br>
-<a href="">GetGlobalAchievementPercentageForApp</a><br>
-<a href="">GetPlayerSummaries</a><br>
-<a href="">GetUserStatsForGame</a><br>
-<a href="">GetFriendList</a><br>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a>
 </nav>
 </footer>
 </body>
