--- a/How to Steam API/apiKey.html
+++ b/How to Steam API/apiKey.html
@@ -4,14 +4,21 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>Steam API Key</title>
 </head>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <body>
 <h1>Lets get set up!</h1><br>
 <p>Before we get started using Steams API we first have to obtain a API Key from steam.</p><br>
 <p>To obtain the Steam API Key begin by going to Steams API Key site located here: <a href="https://steamcommunity.com/login/home/?goto=%2Fdev%2Fapikey">Steam API Key</a></p><br>
 <p>Sign in with your steam account to proceed.</p>
-<img src="">
+<img src="SteamAPI1.png" alt="log in page">
 <p> You will be brought to with a data entry looking like this</p>
-<img src="">
+<img src="SteamAPI2.png" alt="key input">
 <p>Once this is completed I reccomend keeping the key and domain in a separate file so that it is easy to access, but hard to get from outside your computer. </p><br>
 <p>Now that we have our API key we can begin to explore the numerous possiblilities of the Steam API!</p>
 
@@ -20,5 +27,12 @@
 <a href="" class="button">(--Home</a>
 <a href="" class="button">Next--></a>
 </div>
+<footer>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </footer>
 </body>
 </html>
