--- a/How to Steam API/AchieveP.html
+++ b/How to Steam API/AchieveP.html
@@ -5,13 +5,13 @@
 <title>AchievementPercentage</title>
 </head>
 <body>
-<header><a href="">Home</a>
-<a href="">API Key</a>
-<a href="">App News</a>
-<a href="">Player Achievements</a>
-<a href="">Global Achievement %</a>
-<a href="">Friends List</a> 
-</header>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <h1>How valuable or rare is each achievement?</h1>
 <p>The steam API allows us to see the global percentage of achievements, well achieved.</p>
 <p>To begin lets look at the arguements that have to be passed in:</p>
@@ -24,7 +24,7 @@
 <h2>The Call</h2>
 <span><p>http://api.steampowered.com/ISteamUserStats/GetGlobalAchievementPercentagesForApp/v0002/?gameid=15620&format=VDF<p></span>
 <p>The output looks something like this!</p>
-<img src="">
+<img src="achieve1.png" alt="sample output">
 <p>Just as a heads up this is VDF format! You may notice that there is a number before each achievement information! This isn't in either XML or JSON forms and may be of use if you want to count up all the achievements without a program to parse and then determine.</p>
 <p>There are two outputs per achievement:</p>
 <ol>
@@ -34,8 +34,15 @@
 <p>The list ends up being very long, since most games have upwards of 40 to 200 achievements. All of which dont use steams achievement names, making it very inconvienent for use. Luckily this can be used in combination with GetPlayerAchievements which we learned in the previous page how to use.</p> 
 <br>
 <div>
-<a href="" class="button">(--Prev</a>
-<a href="" class="button">Next--></a>
+<a href="AchievePP.html" class="button">(--Prev</a>
+<a href="friends.html" class="button">Next--></a>
 </div>
+<footer>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </footer>
 </body>
 </html>
