--- a/How to Steam API/AchievePP.html
+++ b/How to Steam API/AchievePP.html
@@ -5,13 +5,13 @@
 <title>Player Achievements</title>
 </head>
 <body>
-<header><a href="">Home</a>
-<a href="">API Key</a>
-<a href="">App News</a>
-<a href="">Player Achievements</a>
-<a href="">Global Achievement %</a>
-<a href="">Friends List</a> 
-</header>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <h1>What are those??</h1>
 <p>Some achievements are hard, some are easy, but first you will want to know what they are!</p>
 <p>The GetPlayerAchievements call uses three arguements to give you details about a games achievements and player completion.</p>
@@ -24,7 +24,7 @@
 <h2>The Call</h2>
 <span><p>http://http://api.steampowered.com/ISteamUserStats/GetPlayerAchievements/v0001/?appid=48700&key=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&steamid=76561197972495328</p></span>
 <p>The key has to be your own api key(or someone elses, but i cant endorse stealing) This will give you an output looking something like this:</p>
-<img src="">
+<img src="Achieve2.png">
 <p>The data listed has four outputs:</p>
 <ul>
 <li>steamID-- the user id that is accessing</li>
@@ -35,8 +35,15 @@
 <p>There seems to be missing data on some games so you may want to be careful with how you set up your parsing and make sure it has a no information option.</p>
 <br>
 <div>
-<a href="" class="button">(--Prev</a>
-<a href="" class="button">Next--></a>
+<a href="GetNews.html" class="button">(--Prev</a>
+<a href="AchieveP.html" class="button">Next--></a>
 </div>
+<footer>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </footer>
 </body>
 </html>
