--- a/How to Steam API/GetNews.html
+++ b/How to Steam API/GetNews.html
@@ -5,13 +5,13 @@
 <title>Get News For App</title>
 </head>
 <body>
-<header><a href="">Home</a>
-<a href="">API Key</a>
-<a href="">App News</a>
-<a href="">Player Achievements</a>
-<a href="">Global Achievement %</a>
-<a href="">Friends List</a> 
-</header>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <h1>Get News for App Call</h1>
 <p>The GetNewsForApp call is used for getting news articles posted about or for a game. The call returns information on the article in the format desired.</p>
 <p>This Call requires four arguements and results in the appid and the newsitems(array of news info)</p>
@@ -31,7 +31,7 @@
 </span>
 <p>This uses values appid=230410(warframe),count=3(articles,maxlength=300(characters),format=json</p>
 <p>In the image below we can see a sample of how this looks with these parameters.</p>
-<img src="">
+<img src="Getnews1.png">
 <p>The Output from this shows many objects inside the displayed array. Each object has a meaning to it. Here is a decription for each of the objects</p>
 <ul>
 <li><b>appid</b>--displays the game id</li>
@@ -49,8 +49,15 @@
 </p>
 <br>
 <div>
-<a href="" class="button">(--Prev</a>
-<a href="" class="button">Next--></a>
+<a href="apiKey.html" class="button">(--Prev</a>
+<a href="AchievePP.html" class="button">Next--></a>
 </div>
+<footer>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </footer>
 </body>
 </html>
