--- a/How to Steam API/friends.html
+++ b/How to Steam API/friends.html
@@ -5,13 +5,13 @@
 <title>Player Friends</title>
 </head>
 <body>
-<header><a href="">Home</a>
-<a href="">API Key</a>
-<a href="">App News</a>
-<a href="">Player Achievements</a>
-<a href="">Global Achievement %</a>
-<a href="">Friends List</a> 
-</header>
+<header>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </header>
 <h1>Lets Find Some Friends</h1>
 
 <p>The GetFriendList call gives us the friend list of any steam user. The user has to have a public visiblity, but anyone who does you can see all of their friends!!</p>
@@ -27,7 +27,7 @@
 <h2>The Call</h2>
 <span><p>http://http://api.steampowered.com/ISteamUserStats/GetPlayerAchievements/v0001/?key=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX&steamid=76561197972495328&relationship=friend&format=JSON</p></span>
 <p>The key has to be your own api key(or someone elses, but i cant endorse stealing) This will give you an output looking something like this:</p>
-<img src="">
+<img src="friend1.png">
 <p>The data listed has Three outputs:</p>
 <ul>
 <li>steamid-- the user id that is accessing</li>
@@ -37,7 +37,15 @@
 <p>This can be a fun call to work with since it can find who is friends with who and if you set it up right you can find data on each of a players friends and use that to see how they compare with their friends.</p>
 <br>
 <div>
-<a href="" class="button">(--Prev</a>
+<a href="AchieveP" class="button">(--Prev</a>
+<a href="index.html" class="button">Home--></a>
 </div>
+<footer>
+<a href="index.html">Home</a>
+<a href="apiKey.html">API Key</a>
+<a href="GetNews.html">App News</a>
+<a href="AchievePP.html">Player Achievements</a>
+<a href="AchieveP.html">Global Achievement %</a>
+<a href="friends.html">Friends List</a> </footer>
 </body>
 </html>
